# crisp

./: Cargo.toml  README.md
src/: .#core.crisp  builtin.rs  core.crisp  crisp.rs  data.rs  env.rs  errors.rs  evaluator.rs  expr.rs  heap.rs  l1.rs  lexicals.rs  lib.rs  list.rs  literal.rs  machine.rs  main.rs  map.rs  module.rs  name.rs  parser.rs  prelude.rs  scheduler.rs  source.rs  stack.rs  syntax.rs  vm.rs
src/parser/: .#string.rs
